k8s/components/ip/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ip
  namespace: websites
  labels:
    app.kubernetes.io/name: ip
    homelab/stack: ip
spec:
  selector:
    app: ip
  ports:
    - port: 80
      targetPort: 80
